--- a/Blog/templates/home/index.html.twig
+++ b/Blog/templates/home/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog Home{% endblock %}
+{% block title %}Blog Posts{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container" style="margin-top: 1em;">
         <div class="row">
             {% for post in posts %}
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-top: 1em;">
                     <div class="card">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
-                            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">{{ post.author }}</cite></footer>
+                            <footer class="blockquote-footer">From <cite title="Source Title">{{ post.author }}</cite></footer>
                             <p class="card-text">{{ post.content }}</p>
                             <p>{{ post.createdAt |date("d/m/Y") }}</p>
                             <a href="/posts/{{ post.id }}" class="btn btn-primary">Lire</a>
@@ -21,4 +21,20 @@
             {% endfor %}
         </div>
     </div>
+
+    <nav aria-label="..." style="display: flex;justify-content: center;">
+        <ul class="pagination">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active">
+                <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
