--- a/Blog/templates/home/post.html.twig
+++ b/Blog/templates/home/post.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Blog Article{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container" style="margin-top: 1em;">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <a class="btn btn-primary" href="/home">Retour</a>
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                 <h1>{{ post.title }}</h1>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">{{ post.author }}</cite></footer>
+                <footer class="blockquote-footer">From <cite title="Source Title">{{ post.author }}</cite></footer>
                 <p class="card-text">{{ post.content }}</p>
                 <p>{{ post.createdAt |date("d/m/Y") }}</p>
             </div>
