--- a/Blog/templates/home/index.html.twig
+++ b/Blog/templates/home/index.html.twig
@@ -21,6 +21,7 @@
             {% endfor %}
         </div>
     </div>
+    {{ knp_pagination_render(posts) }}
 
     <nav aria-label="..." style="display: flex;justify-content: center;">
         <ul class="pagination">
