--- a/Blog/templates/home/index.html.twig
+++ b/Blog/templates/home/index.html.twig
@@ -14,7 +14,7 @@
                             <footer class="blockquote-footer">From <cite title="Source Title">{{ post.author }}</cite></footer>
                             <p class="card-text">{{ post.content }}</p>
                             <p>{{ post.createdAt |date("d/m/Y") }}</p>
-                            <a href="/posts/{{ post.getAuthor() }}" class="btn btn-primary">Lire</a>
+                            <a href="/articles/{{ post.getAuthor() }}" class="btn btn-primary">Lire</a>
                         </div>
                     </div>
                 </div>
