--- a/Blog/templates/base.html.twig
+++ b/Blog/templates/base.html.twig
@@ -2,43 +2,70 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Lorem Ipsum{% endblock %}</title>
+
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     {% endblock %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #FAEBD7;">
-        <a class="navbar-brand" href="#">Blog</a>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #343334;">
+        <a class="navbar-brand" href="#">Lorem Ipsum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/home">Posts</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Connect
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Sign-In</a>
-                        <a class="dropdown-item" href="#">Log-In</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+
+                {% if app.user %}
+
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            API
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/api/posts">MyLastFivePosts</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/api/otherposts">MyFriendsLastFivePosts</a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item dropdown active" style="list-style:none;">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            ManageMyPosts
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/post/">All My Posts</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/post/new">Create A New Post</a>
+                        </div>
+                    </li>
+
+                {% endif %}
+
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>
-            </form>
+
+            <li class="nav-item dropdown" style="list-style: none;">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-decoration-color: white;">
+                    Admin Access
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/login">Log-In</a>
+                    {% if app.user %}
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/logout">Logout</a>
+                    {% endif %}
+                </div>
+            </li>
+
         </div>
     </nav>
 </head>
+
 <body>
 {% block body %}
 {% endblock %}
