--- a/Blog/templates/home/index.html.twig
+++ b/Blog/templates/home/index.html.twig
@@ -1,29 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog Posts{% endblock %}
+{% block title %}My Posts{% endblock %}
 
 {% block body %}
-    <div class="container" style="margin-top: 1em;">
-        <div class="row">
-            {% for post in posts %}
-                <div class="col-md-4" style="margin-top: 1em;">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <footer class="blockquote-footer">From <cite title="Source Title">{{ post.author }}</cite></footer>
-                            <p class="card-text">{{ post.content }}</p>
-                            <p>{{ post.createdAt |date("d/m/Y") }}</p>
-                            <a href="/articles/{{ post.getAuthor() }}" class="btn btn-primary">Lire</a>
+
+    <div class="id" style="background-image: url('https://lh3.googleusercontent.com/proxy/7spDjNUO7eqoUaH-Sjlgx1hiIcWoBopi2DW_fGpUebX5Ykjhxl8GCvBJAPHlej1WXRRdDJCNW60hSlo');background-size: cover;">
+
+        <img src="{{ asset('images/lorem.png')}}" style="width: 100%">
+
+        <div class="container" style="margin-top: 1em;">
+            <div class="row">
+                {% for post in posts %}
+                    <div class="col-md-4" style="margin-top: 1em;">
+                        <div class="card">
+                            <img src="{{ asset('images/Lorem IPSUM.png')}}" class="card-img-top" alt="...">
+                            <div class="card-body">
+
+                                <h5 class="card-title">{{ post.title }}</h5>
+                                <!-- <p class="card-text">{{ post.content }}</p> -->
+
+                                <footer class="blockquote-footer">Created the <cite title="Source Title">{{ post.createdAt |date("d/m/Y") }}</cite></footer>
+
+                                <a href="/articles/{{ post.getAuthor() }}" class="btn btn-primary" style="margin-top: 1em;float: right;">Read</a>
+
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
+
+
+        <nav aria-label="..." style="display: flex;justify-content: center;margin-top: 10px; ">
+            {{ knp_pagination_render(posts) }}
+        </nav>
+
     </div>
-
-
-    <nav aria-label="..." style="display: flex;justify-content: center;">
-        {{ knp_pagination_render(posts) }}
-    </nav>
 {% endblock %}
