--- a/Blog/templates/home/post.html.twig
+++ b/Blog/templates/home/post.html.twig
@@ -3,16 +3,26 @@
 {% block title %}Blog Article{% endblock %}
 
 {% block body %}
-    <div class="container" style="margin-top: 1em;">
-        <div class="row">
-            <div class="col-md-5">
-                <a class="btn btn-primary" href="/home">Retour</a>
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                <h1>{{ post.title }}</h1>
-                <footer class="blockquote-footer">From <cite title="Source Title">{{ post.author }}</cite></footer>
-                <p class="card-text">{{ post.content }}</p>
-                <p>{{ post.createdAt |date("d/m/Y") }}</p>
+    <div class="id" style="width:100%;height:100%;background-image: url('{{ asset('images/Background.png')}}');">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <a class="btn btn-primary" href="/home" style="margin-top: 1em;">Back</a>
+
+                    <h1 style="margin-top: 1em;align-content: center;">{{ post.title }}</h1>
+                    <footer class="blockquote-footer">Created the <cite title="Source Title">{{ post.createdAt |date("d/m/Y") }}</cite></footer>
+
+                    <img src="{{ asset('images/Lorem IPSUM.png')}}" class="card-img-top" style="margin-top: 1em;" alt="...">
+
+                    <div style="background-color: white">
+                        <p class="card-text" style="margin-top: 1em;margin-bottom: 1em;">{{ post.content }}</p>
+                    </div>
+
+                </div>
             </div>
         </div>
+
     </div>
 {% endblock %}
