--- a/Blog/templates/home/post.html.twig
+++ b/Blog/templates/home/post.html.twig
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <a class="btn btn-primary" href="/home" style="margin-top: 1em;">Back</a>
+                    <a class="btn btn-primary" href="/" style="margin-top: 1em;">Back</a>
 
                     <h1 style="margin-top: 1em;align-content: center;">{{ post.title }}</h1>
                     <footer class="blockquote-footer">Created the <cite title="Source Title">{{ post.createdAt |date("d/m/Y") }}</cite></footer>
