--- a/Blog/templates/post/index.html.twig
+++ b/Blog/templates/post/index.html.twig
@@ -11,7 +11,7 @@
                 <th>Id</th>
                 <th>Title</th>
                 <th>Content</th>
-                <th>Author</th>
+                <th>Author (Slug)</th>
                 <th>CreatedAt</th>
                 <th>actions</th>
             </tr>
@@ -25,8 +25,8 @@
                 <td>{{ post.author }}</td>
                 <td>{{ post.createdAt ? post.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('post_show', {'id': post.id}) }}">show</a>
-                    <a href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('post_show', {'id': post.id}) }}">show</a>
+                    <a class="btn btn-primary" href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
