--- a/Blog/templates/post/show.html.twig
+++ b/Blog/templates/post/show.html.twig
@@ -20,7 +20,7 @@
                 <td>{{ post.content }}</td>
             </tr>
             <tr>
-                <th>Author</th>
+                <th>Author (Slug)</th>
                 <td>{{ post.author }}</td>
             </tr>
             <tr>
@@ -30,9 +30,11 @@
         </tbody>
     </table>
 
-    <a href="{{ path('post_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('post_index') }}">back to list</a>
 
-    <a href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
+    <a class="btn btn-primary" href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
 
-    {{ include('post/_delete_form.html.twig') }}
+    <div style="margin-top: 2em;">
+        <p>Supprimer le post : </p> {{ include('post/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
