--- a/Blog/templates/post/edit.html.twig
+++ b/Blog/templates/post/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Post{% endblock %}
 
 {% block body %}
-    <h1>Edit Post</h1>
 
-    {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="col-md-12" style="margin-top: 1em;">
 
-    <a href="{{ path('post_index') }}">back to list</a>
+        <h1>Edit Post</h1>
 
-    {{ include('post/_delete_form.html.twig') }}
+        {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
+
+        <a class="btn btn-primary" style="margin-top: 1em; margin-bottom: 1em;" href="{{ path('post_index') }}">Back to list</a>
+
+        {{ include('post/_delete_form.html.twig') }}
+
+    </div>
+
 {% endblock %}
