--- a/Blog/templates/post/edit.html.twig
+++ b/Blog/templates/post/edit.html.twig
@@ -10,7 +10,7 @@
 
         {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <a class="btn btn-primary" style="margin-top: 1em; margin-bottom: 1em;" href="{{ path('post_index') }}">Back to list</a>
+        <a class="btn btn-light" style="margin-top: 1em; margin-bottom: 1em;" href="{{ path('post_index') }}">Back to list</a>
 
         {{ include('post/_delete_form.html.twig') }}
 
