--- a/Blog/templates/post/new.html.twig
+++ b/Blog/templates/post/new.html.twig
@@ -3,9 +3,13 @@
 {% block title %}New Post{% endblock %}
 
 {% block body %}
-    <h1>Create new Post</h1>
+    <div class="col-md-12" style="margin-top: 1em;">
 
-    {{ include('post/_form.html.twig') }}
+        <h1>Create new Post</h1>
 
-    <a href="{{ path('post_index') }}">back to list</a>
+        {{ include('post/_form.html.twig') }}
+
+        <a class="btn btn-light" href="{{ path('post_index') }}">Back to list</a>
+
+    </div>
 {% endblock %}
