--- a/Blog/templates/post/show.html.twig
+++ b/Blog/templates/post/show.html.twig
@@ -3,10 +3,12 @@
 {% block title %}Post{% endblock %}
 
 {% block body %}
-    <h1>Post</h1>
+    <div class="col-md-12" style="margin-top: 1em;">
 
-    <table class="table">
-        <tbody>
+        <h1>Post</h1>
+
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ post.id }}</td>
@@ -27,14 +29,16 @@
                 <th>CreatedAt</th>
                 <td>{{ post.createdAt ? post.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a class="btn btn-primary" href="{{ path('post_index') }}">back to list</a>
+        <a class="btn btn-primary" href="{{ path('post_index') }}">Back to list</a>
 
-    <a class="btn btn-primary" href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
+        <a class="btn btn-primary" href="{{ path('post_edit', {'id': post.id}) }}">Edit</a>
 
-    <div style="margin-top: 2em;">
-        <p>Supprimer le post : </p> {{ include('post/_delete_form.html.twig') }}
+        <div style="margin-top: 2em;">
+            <p>Delete the post : </p> {{ include('post/_delete_form.html.twig') }}
+        </div>
+
     </div>
 {% endblock %}
