--- a/Blog/templates/post/index.html.twig
+++ b/Blog/templates/post/index.html.twig
@@ -25,8 +25,8 @@
                 <td>{{ post.author }}</td>
                 <td>{{ post.createdAt ? post.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a class="btn btn-secondary" href="{{ path('post_show', {'id': post.id}) }}">Show</a>
-                    <a class="btn btn-secondary" style="margin-top: 1em;" href="{{ path('post_edit', {'id': post.id}) }}">Edit</a>
+                    <a class="btn btn-outline-dark" href="{{ path('post_show', {'id': post.id}) }}">Show</a>
+                    <a class="btn btn-outline-dark" style="margin-top: 1em;" href="{{ path('post_edit', {'id': post.id}) }}">Edit</a>
                 </td>
             </tr>
         {% else %}
@@ -37,6 +37,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('post_new') }}">Create new</a>
+    <a class="btn btn-outline-success" href="{{ path('post_new') }}">Create new</a>
 
 {% endblock %}
