--- a/Blog/templates/home/index.html.twig
+++ b/Blog/templates/home/index.html.twig
@@ -13,7 +13,7 @@
                 {% for post in posts %}
                     <div class="col-md-4" style="margin-top: 1em;">
                         <div class="card">
-                            <img src="{{ asset('images/Lorem IPSUM.png')}}" class="card-img-top" alt="...">
+                            <img src="{{ asset('images/Lorem IPSUM 1.png')}}" class="card-img-top" alt="...">
                             <div class="card-body">
 
                                 <h5 class="card-title">{{ post.title }}</h5>
